tests/ui/consts/timeout.stderr
error: constant evaluation is taking a long time
  --> $SRC_DIR/core/src/num/mod.rs:LL:COL
   |
   = note: this lint makes sure the compiler doesn't get stuck due to infinite loops in const eval.
           If your compilation actually takes a long time, you can safely allow the lint.
help: the constant being evaluated
  --> $DIR/timeout.rs:8:1
   |
LL | static ROOK_ATTACKS_TABLE: () = {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: `#[deny(long_running_const_eval)]` on by default
   = note: this error originates in the macro `uint_impl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

